--- a/style.css
+++ b/style.css
@@ -172,6 +172,20 @@ p {
 .explanation p::first-letter {
     font-weight: bold;
 }
+#zen-explanation::after {
+    content: "Object Used In Typing";
+    text-align: center;
+    font-family: Header, 'Arial Narrow Bold', sans-serif;
+    display: block;
+    width: 300px;
+    height: 200px;
+    background: url(assets1/writer.png) no-repeat;
+    background-size: contain;
+    border: 2px double rgba(27, 24, 24, 0.9);
+    border-width: 3px;
+    margin-top: 2em;
+    margin-left: 1em;
+}
 .participation h3 {
     font-family: Participation, 'Arial Narrow', Arial, sans-serif; /*Participation uses specified font family */
     font-size: 3em;
