--- a/style.css
+++ b/style.css
@@ -87,195 +87,200 @@ header abbr { /*Affects 'CSS' of h2*/
     display: grid; /*Enables grid layout*/
     grid-template-areas: "intro intro intro" /*Establishes grid areas, specifies 3 columns of intro*/
                          "sidebar main-supporting main-supporting" /*Specifies 1 column of sidebar, 2 columns of main-supporting*/
-                         "sidebar main-supporting main-supporting";
-    grid-template-columns: 1.3fr 1fr 3fr;
-    grid-template-rows: auto auto auto;
-    gap: 0px 0px;
+                         "sidebar main-supporting main-supporting"; /*Specifies 1 columns of sidebar, 2 columns of main-supporting*/
+    grid-template-columns: 1.3fr 1fr 3fr; /*Specifies sizing of grid row, the third occupies the most relative space*/
+    grid-template-rows: auto auto auto; /*Specifies row sizing of grid row to auto size*/
+    gap: 0px 0px; /*Specifies sizing of of column and row gutters, here there are no gutters*/
 }
 p {
     font-family: News, 'Times New Roman', Times, serif; /*Paragraphs uses specified font family */
     letter-spacing: -0.03em; /*Narrows letter spacing to emulate crowded newspaper typography */
     line-height: 1em; /*Shorter line height to emulate crowded newspaper typography */
 }
-.summary p:first-child {
+.summary p:first-child { /*Affect first paragraph of .summary*/
     font-family: Summary, 'Arial Narrow', Arial, sans-serif; /*Summary uses specified font family */
-    font-weight: bold;
-    font-size: 1.8em;
-    letter-spacing: 0.015em;
-    line-height: 1.1em;
-    width: 89%;
-    text-align: right;
-    margin-top: 0;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    padding-bottom: 0.2em;
-    border-right: 2px solid rgba(27, 24, 24, 0.9);
-    border-bottom: 1px double rgba(27, 24, 24, 0.9);
-    border-bottom-width: 3px;
+    font-weight: bold; /*Sets font to bold*/
+    font-size: 1.8em; /*Sets bigger font size to 1.8em*/
+    letter-spacing: 0.015em; /*Widens spacing between letters*/
+    line-height: 1.1em; /*Makes height between lines larger*/
+    width: 89%; /*Sets the width size to contain content in correct space*/
+    text-align: right; /*Text is aligned to the right to create stylistic effect*/
+    margin-top: 0; /*Resets top margin to bring content closer to upper header box*/
+    padding-left: 0.5em; /*Content moves to the right 0.5em for organization away from the page border*/
+    padding-right: 0.5em; /*Border-right is moved 0.5em to the right for tidy styling*/
+    padding-bottom: 0.2em; /*Border-bottom is moved 0.2em downwards for tidy styling*/
+    border-right: 1px double  rgba(27, 24, 24, 0.9); /*Creates double right side border line*/
+    border-bottom: 1px double rgba(27, 24, 24, 0.9); /*Created double bottom border line*/
+    border-bottom-width: 3px; /*Specifies bottom border line size to 3 pixels*/
 }
-.summary abbr {
+.summary abbr { /*Affects abbreviated 'CSS' of .summary*/
     text-decoration-line: none; /*Removes default dotted line decoration */
-    font-style: italic;
-    font-size: 1.1em;
+    font-style: italic; /*Sets font of 'CSS' to Italic*/
+    font-size: 1.1em; /*Sets font size to 1.1em which is larger*/
 }
-.summary p:nth-child(2) {
+.summary p:nth-child(2) { /*Affects second paragraph of .summary, can alternatively be written as .summary p:last-child*/
     font-family: SummaryDownload, 'Arial Narrow', Arial, sans-serif; /*SummaryDownload uses specified font family */
-    font-size: 1.4em;
-    width: 89%;
-    text-align: right;
-    padding-left: 0.5em;
-    padding-right: 0.8em;
-    padding-top: 0.2em;
-    border-right: 2px solid rgba(27, 24, 24, 0.9);
-    border-top: 1px double rgba(27, 24, 24, 0.9);
-    border-top-width: 3px;
+    font-size: 1.4em; /*Sets font size to 1.4em, which is larger*/
+    width: 89%; /*Sets width size to 89% to prevent colliding content*/
+    text-align: right; /*Text is aligned to the right to create stylistic effect*/
+    padding-left: 0.5em; /*Extends padding to align paragraph and border line to the first paragraph*/
+    padding-right: 0.8em; /*Extends right border line to align with first paragraph*/
+    padding-top: 0.2em; /*Creates space away from the top of its border line*/
+    border-right: 1px double rgba(27, 24, 24, 0.9); /*Creates 1 pixel double right border line*/
+    border-top: 1px double rgba(27, 24, 24, 0.9); /*Creates 1 pixel double top border line*/
+    border-top-width: 3px; /*Specifies top border width to be 3 pixels to emphasize doubling*/
 }
-.preamble h3 {
+.preamble h3 { /*Affects header of the preamble*/
     font-family: Preamble, 'Arial Narrow', Arial, sans-serif; /*Preamble uses specified font family */
-    font-size: 4em;
-    padding: 0;
-    margin: 0;
-    line-height: 1em;
-    margin-bottom: 0.2em;
+    font-size: 4em; /*Sets text size to 4em*/
+    padding: 0; /*Resets padding*/
+    margin: 0; /*Resets margin*/
+    line-height: 1em; /*Sets height of lines to 1em*/
+    margin-bottom: 0.2em; /*Creates bottom margin to further separate header and preamble paragraph*/
 }
-.preamble p {
-   font-size: 1.3em;
-   margin-block: 0.1em;
-   width: 98%;
-   text-indent: 1.5em;
-   padding-bottom: 0.5em;
+.preamble p { /*Affects preamble's paragraph*/
+   font-size: 1.3em; /*Sets text size to 1.3em*/
+   margin-block: 0.1em; /*Sets start and end margins of the content block to 0.1em, narrowing down the box*/
+   width: 98%; /*Sets width to 98% to contain text without it colliding with other content*/
+   text-indent: 1.5em; /*Sets indent of each first line of the paragraphs to 1.5em*/
+   padding-bottom: 0.5em; /*Sets bottom padding to 0.5em to make space between paragraphs*/
 }
-.preamble p:nth-child(4) {
-    border-bottom: 2px solid rgba(27, 24, 24, 0.9);
+.preamble p:nth-child(4) { /*Affects the 4th paragraph of the preamble*/
+    border-bottom: 2px solid rgba(27, 24, 24, 0.9); /*Creates a 2 pixel solid black bottom border line for the 4th paragraph*/
 }
-.preamble p::first-letter {
-    font-weight: bold;
+.preamble p::first-letter { /*Affects the first letter of each paragraph in preamble*/
+    font-weight: bold; /*Sets text weight to bold*/
 }
-.explanation {
-    width: 90%;
+.explanation { /*Affects the entire "So What is This About" section*/
+    width: 90%; /*Sets width to 90% to prevent collision of content*/
 }
-.explanation h3 {
+.explanation h3 { /*Affects header of explanation*/
     font-family: Explanation, 'Arial Narrow', Arial, sans-serif; /*Explanation uses specified font family */
-    font-size: 2.4em;
-    padding: 0;
-    margin: 0;
-    padding-top: 0.5em;
-    line-height: 1em;
-    margin-bottom: 0.2em;
+    font-size: 2.4em; /*Sets text size to 2.4em for visibility*/
+    padding: 0; /*Resets padding*/
+    margin: 0; /*Resets margin to bring header closer to other boxes, upwards*/
+    padding-top: 0.5em; /*Sets top padding to 0.5em to maintain some separation between header and border line*/
+    line-height: 1em; /*Sets height of line to 1em */
+    margin-bottom: 0.2em; /*Sets bottom margin to 0.2em to create space between header and its paragraphs */
 }
-.explanation p {
-    font-size: 1.3em;
-    margin: 0;
-    text-indent: 1.5em;
-    padding-bottom: 0.5em;
+.explanation p { /*Affects paragraphs from the explanation section*/
+    font-size: 1.3em; /*Sets text size to 1.3em for consistency of layout given other paragraphs*/
+    margin: 0; /*Resets margin to narrow paragraph boxes, makes them closer to each other*/
+    text-indent: 1.5em; /*Sets the text indent of each paragraph to 1.5em for consistency*/
+    padding-bottom: 0.5em; /*Sets bottom padding to 0.5em to create some space between paragraphs*/
 }
-.explanation p::first-letter {
-    font-weight: bold;
+.explanation p::first-letter { /*Affects the first letter of each paragraph in explanation*/
+    font-weight: bold; /*Sets font weight to bold for readability*/
 }
-#zen-explanation::after {
-    content: "Object Used In Typing";
-    text-align: center;
-    padding-top: 0.5gem;
-    font-family: Header, 'Arial Narrow Bold', sans-serif;
-    display: block;
-    width: 300px;
-    height: 200px;
-    background: url(assets1/writer.png) no-repeat;
-    background-size: contain;
-    border: 2px double rgba(27, 24, 24, 0.9);
-    border-width: 3px;
-    margin-top: 2em;
-    margin-left: 1em;
+#zen-explanation::after { /*Affects the space after the zen-explanation content, instead of the original content space*/
+    content: "Object Used In Typing"; /*Custom Caption for style purposes*/
+    text-align: center; /*Aligns content text to center to align with photo*/
+    padding-top: 0.5em; /*Creates padding to make gap between content and upper border line*/
+    font-family: Header, 'Arial Narrow Bold', sans-serif; /*Specifies fonts for the content*/
+    display: block; /*Establishes all content including the image to be styled as a block*/
+    width: 300px; /*Sets width of this space*/
+    height: 200px; /*Sets height of this space*/
+    background: url(assets1/writer.png) no-repeat; /*Background image of typewriter for the newspaper theme, no-repeat is used to to prevent replication of image*/
+    background-size: contain; /*The background image, the typewriter, is contained within the specified height and width*/
+    border: 2px double rgba(27, 24, 24, 0.9); /*All around the content is a 2 pixel border line to create area distinction*/
+    border-width: 3px; /*Width of border is 3 pixels to establish doubling*/
+    margin-top: 2em; /*Creates 2em of top margin to separate after-content and explanation paragraphs */
+    margin-left: 1em; /*Creates 1em of left margin to align whole content block into center*/
 }
-.participation h3 {
+.participation h3 { /*Affects header of participation section*/
     font-family: Participation, 'Arial Narrow', Arial, sans-serif; /*Participation uses specified font family */
-    font-size: 3em;
-    letter-spacing: 0.1em;
-    margin: 0;
-    margin-bottom: 0.2em;
+    font-size: 3em; /*Makes text size larger */
+    letter-spacing: 0.1em; /*Widens spacing between letters to create newspaper's crowding effect*/
+    margin: 0; /*Resets margin*/
+    margin-bottom: 0.2em; /*Bottom margin makes space between header and following paragraphs*/
+    border-top: 2px solid black; /*makes a 2 pixel solid black border top line to maintain content box separation*/
+    margin-top: -4px; /* Brings header border line align with the other border line*/
 }
-.participation {
-    width: 98%;
+.participation { /*Affects all of the participation section*/
+    width: 98%; /*Sets width to prevent content collision*/
 }
-.participation p {
-    margin: 0;
-    font-size: 1.3em;
-    text-indent: 1.5em;
-    padding-bottom: 0.5em;
+.participation p { /*Affects paragraphs from participation section*/
+    margin: 0; /*Resets margin to narrow down content box*/
+    font-size: 1.3em; /*Makes text larger to provide consistency*/
+    text-indent: 1.5em; /*Again, provides consistency and readability*/
+    padding-bottom: 0.5em; /*Creates bottom space between paragraphs*/
  }
- .participation p::first-letter {
-    font-weight: bold;
+ .participation p::first-letter { /*Affects the first letter of the paragraphs of participation*/
+    font-weight: bold; /*Provides consistency and readability*/
 }
-.benefits h3 {
+.benefits h3 { /*Affects header of the benefits section*/
     font-family: Participation, 'Arial Narrow', Arial, sans-serif; /*Participation uses specified font family */
-    font-size: 3em;
-    letter-spacing: 0.1em;
-    margin: 0;
-    margin-bottom: 0.2em;
+    font-size: 3em; /*Makes header text larger for readability*/
+    letter-spacing: 0.1em; /*Widens spacing between letters*/
+    margin: 0; /*Resets margin to bring */
+    margin-bottom: 0.2em; /*Makes space between header and its paragraphs*/
 }
-.benefits {
-    width: 98%;
+.benefits { /*Affects the whole benefits section*/
+    width: 98%; /*Prevents collision with other content and creates consistency*/
 }
-.benefits p {
-    margin: 0;
-    font-size: 1.3em;
-    text-indent: 1.5em;
-    padding-bottom: 0.5em;
+.benefits p { /*Affects the paragraphs of benefits*/
+    margin: 0; /*Brings paragraph closer to header*/
+    font-size: 1.3em; /*Provides consistency and readability*/
+    text-indent: 1.5em; /*Provides consistency and readability*/
+    padding-bottom: 0.5em; /*Space between bottom of paragraph and other distinct contents*/
  }
- .benefits p::first-letter {
-    font-weight: bold;
+ .benefits p::first-letter { /*Affects first letter of the paragraph of benefits*/
+    font-weight: bold; /*Provides consistency and readability*/
 }
-.requirements h3 {
+.requirements h3 { /*Affects header of requirements section*/
     font-family: Participation, 'Arial Narrow', Arial, sans-serif; /*Participation uses specified font family */
-    font-size: 3em;
-    letter-spacing: 0.1em;
-    margin: 0;
-    margin-bottom: 0.2em;
+    font-size: 3em; /*Makes text bigger for readability*/
+    letter-spacing: 0.1em; /*Widens spacing between letters for newspaper styling*/
+    margin: 0; /*Brings content box closer to other boxes*/
+    margin-bottom: 0.2em; /*Space between header and paragraphs are created*/
 }
-.requirements {
-    width: 96%;
+.requirements { /*Affects the requirements section*/
+    width: 96%; /*Prevents content collision*/
 }
-.requirements p {
-    margin: 0;
-    font-size: 1.3em;
-    text-indent: 1.5em;
-    padding-bottom: 0.5em;
+.requirements p { /*Affects the paragraphs of requirement*/
+    margin: 0; /*Sets content box closer to header and narrows it down*/
+    font-size: 1.3em; /*Makes text larger for consistency and readability*/
+    text-indent: 1.5em; /*Indent is the same for the other paragraphs*/
+    padding-bottom: 0.5em; /*Makes space between paragraphs*/
  }
- .requirements p::first-letter {
-    font-weight: bold;
+ .requirements p::first-letter { /*Affects the first letter of every paragraph of requirements*/
+    font-weight: bold; /*Text is bold for readability and consistency*/
 }
 
-.design-selection, .design-archives, .zen-resources {
-    width: 90%;
-    border-right: 2px solid rgba(27, 24, 24, 0.9);
+.design-selection, .design-archives, .zen-resources { /*Affects the "Select a Design", "Archives", and "Resources" sections*/
+    width: 90%; /*Prevents content collision*/
+    border-right: 2px solid rgba(27, 24, 24, 0.9); /*Creates a border line on the right for distinction of space*/
 }
-.design-selection h3, .design-archives h3, .zen-resources h3 {
-    text-transform: uppercase;
-    text-align: center;
+.design-selection h3, .design-archives h3, .zen-resources h3 { /*Affects the headers of aforementioned sections*/
+    text-transform: uppercase; /*All letters are capitalized for stylistic distinction*/
+    text-align: center; /*text is centered to prevent from touching the page border*/
     font-family: Participation, 'Arial Narrow', Arial, sans-serif; /*tipo uses specified font family */
-    font-size: 3em;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
-    padding-top: 0.5em;
-    line-height: 1em;
-    margin-bottom: 0.2em;
+    font-size: 3em; /*Makes the header text bigger*/
+    font-weight: bold; /*Makes text bold for readability*/
+    padding: 0; /*Resets padding*/
+    margin: 0; /*Resets margin to bring content boxes together */
+    padding-top: 0.5em; /*Creates some space between boxes*/
+    line-height: 1em; /*Narrows down line height because of continuing lines from the header and compact readability*/
+    margin-bottom: 0.2em; /*Space is created between header and lists*/
 }
-ul {
-    list-style-type: upper-roman;
-    list-style-position: inside;
+.design-selection h3 { /*Affect the header "Select a Design"*/
+    border-top: 2px solid black; /*Top border line is made for finish containment*/
 }
-ul li::marker {
-    font-family: Header, 'Arial Narrow Bold', sans-serif
+ul { /*Affects entire lists */
+    list-style-type: upper-roman; /*Roman numerals are used for listing for the aesthetic*/
+    list-style-position: inside; /*Entire list is contained within its box, preventing text from flowing out*/
 }
-ul li a {
-    font-size: 1.4em;
-    text-decoration-line: none;
+ul li::marker { /*Affects the listing type and anything below li*/
+    font-family: Header, 'Arial Narrow Bold', sans-serif /*Specifies font for the list style type, following the newspaper theme*/
 }
-a {
-    text-decoration-line: underline; /*Removes default underline decoration */
-    font-weight: bold;
-    color: rgba(17, 37, 69, 1);
+ul li a { /*Affects the link text*/
+    font-size: 1.4em; /*Makes the font bigger*/
+    text-decoration-line: none; /*Removes the default underline from the links*/
+}
+a { /*Affects ALL link text occurrences unless explicitly defined like the one above*/
+    text-decoration-line: underline; /*Creates underline*/
+    font-weight: bold; /*Bolds the text for visual distinction within the sentences*/
+    color: rgba(17, 37, 69, 1); /*Blackish tone for text color and distinction*/
 }
 
 /* MORE CSS GRID, MAIN GRIDS: Intro, Main-supporting, Sidebar*/
